[package]
name = "unitas-rs"
edition = "2024"

[dependencies]
pattern-macro = { path = "./pattern-macro/" }
pattern = { path = "./pattern/" }
log = "0.4.26"
const-str = { version = "0.6.2", features = ["proc"] }
retour = { git = "https://github.com/Eddio0141/retour-rs.git", branch = "master", features = ["static-detour"] }
time = { version = "0.3.39", features = ["formatting"] }
backtrace = "0.3.74"
colored = "3.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.170"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", default-features = false, features = [ "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Threading" ] }

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
    ".", "pattern",
    "pattern-macro",
]
