[package]
name = "unitas-rs"
edition = "2024"

[dependencies]
pattern-macro = { path = "./pattern-macro/" }
pattern = { path = "./pattern/" }
log = "0.4.29"
const-str = { version = "1.0.0", features = ["proc"] }
retour = { git = "https://github.com/Eddio0141/retour-rs.git", branch = "mid-function-hook", features = ["static-detour"] }
time = { version = "0.3.45", features = ["formatting"] }
backtrace = "0.3.76"
colored = "3.1.1"
thiserror = "2.0.18"

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", default-features = false, features = [ "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Performance" ] }

[dev-dependencies]
windows-sys = { version = "0.61.2", default-features = false, features = [ "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Performance" ] }

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
    ".", "pattern",
    "pattern-macro",
]

[profile.release]
codegen-units = 1
lto = "fat"
