[package]
authors = ["yuu0141 <https://github.com/Eddio0141>"]
description = "A tool to set up UniTAS for some unity games"
edition = "2021"
name = "unitas_setup_tool"
publish = false
version = "1.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = {version = "4.1.8", features = ["derive"]}
dirs = "4.0.0"
env_logger = "0.10.0"
goblin = "0.6.1"
log = "0.4.17"
pelite = "0.10.0"
reqwest = "0.11.14"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = {version = "1.26.0", features = ["rt", "fs", "macros", "rt-multi-thread"]}
zip = "0.6.4"
